SCRUM-48 : Correction boutons expand/collapse CGDU

--- a/ArtSyreFront/src/app/cgdu/cgdu.component.scss
+++ b/ArtSyreFront/src/app/cgdu/cgdu.component.scss
@@ -49,5 +49,7 @@ mat-list-item {
 }
 
 .example-action-buttons {
-  padding-bottom: 20px;
+  padding-bottom: 10px;
+  display: flex;
+  gap: 10px;
 }
